[project]
name = "shacl2code"
description = "Convert SHACL model file to code bindings"
dynamic = ["version"]
dependencies = [
    "jinja2 >= 3.1.2",
    "pyld >= 2.0.3",
]
required-python = ">= 3.8"
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4",
    "pytest-server-fixtures >= 1.7",
    "pytest-cov >= 4.1",
    "flake8 >= 7.0.0",
    "jsonschema >= 4.21.1",
]

[project.urls]
Homepage = "https://github.com/JPEWdev/shacl2code"
Repository = "https://github.com/JPEWdev/shacl2code.git"
Issues = "https://github.com/JPEWdev/shacl2code/issues"

[project.scripts]
shacl2code = "shacl2code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/shacl2code/version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=shacl2code",
]

[tool.coverage.run]
relative_files = true
