[project]
name = "shacl2code"
description = "Convert SHACL model file to code bindings"
dynamic = ["version"]
dependencies = [
    "jinja2 >= 3.1.2",
    "rdflib >= 7.0.0",
]
requires-python = ">= 3.8"
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "flake8 >= 7.0.0",
    "jsonschema >= 4.21.1",
    "mypy >= 1.14.1",  # latest version for Python 3.8 is 1.14.x
    "pyrefly >= 0.28.1",
    "pyright >= 1.1.403",
    "pyshacl >= 0.25.0",
    "pytest >= 7.4",
    "pytest-cov >= 4.1",
]

[project.urls]
Homepage = "https://github.com/JPEWdev/shacl2code"
Repository = "https://github.com/JPEWdev/shacl2code.git"
Issues = "https://github.com/JPEWdev/shacl2code/issues"

[project.scripts]
shacl2code = "shacl2code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/shacl2code/version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=shacl2code",
]
# Suppress 3rd-party warnings to reduce log noise. Remove after libraries get updated.
filterwarnings = [
    "ignore:.*ConjunctiveGraph is deprecated.*:DeprecationWarning",         # From rdflib
    "ignore:.*Dataset.default_context is deprecated.*:DeprecationWarning",  # From rdflib, pyshacl
    "ignore:.*Dataset.contexts is deprecated.*:DeprecationWarning",         # From rdflib
]
pythonpath = [
    "testfixtures"
]

[tool.coverage.run]
relative_files = true
patch = ["subprocess"]

[tool.black]
include = '(\.pyi?$)|(python\.j2$)'
